securitygroup.tf
resource "aws_security_group" "bastionSecurity" {                                                                                            
  vpc_id      = aws_vpc.main.id                                                                                                              
  name        = "allow-ssh"                                                                                                                  
  description = "security group that allows ssh and all egress traffic"                                                                      
  egress {                                                                                                                                   
    from_port   = 0                                                                                                                          
    to_port     = 0                                                                                                                          
    protocol    = "-1"                                                                                                                       
    cidr_blocks = ["0.0.0.0/0"]                                                                                                              
  }                                                                                                                                          
                                                                                                                                             
  ingress {                                                                                                                                  
    from_port   = 22                                                                                                                         
    to_port     = 22                                                                                                                         
    protocol    = "tcp"                                                                                                                      
    cidr_blocks = ["0.0.0.0/0"]                                                                                                              
  }                                                                                                                                          
  tags = {                                                                                                                                   
    Name = "allow-ssh"                                                                                                                       
  }                                                                                                                                          
}                                                                                                                                            
                                                                                                                                             
resource "aws_security_group_rule" "allow-all"{                                                                                              
    type="ingress"                                                                                                                           
    from_port   = 80                                                                                                                         
    to_port     = 80                                                                                                                         
    protocol    = "tcp"                                                                                                                      
    source_security_group_id="${aws_security_group.firewall-SG.id}"                                                                          
    security_group_id="${aws_security_group.bastionSecurity.id}"                                                                             
 }
